// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`English render 1`] = `
<div>
  <button
    class="button"
    data-testid="menuButton"
  >
    <span
      class="buttonBurgerIcon"
    >
      <span
        class="top"
      />
      <span
        class="middle"
      />
      <span
        class="bottom"
      />
    </span>
    <span
      class="buttonText"
    >
      MENU
    </span>
  </button>
</div>
`;

exports[`Norsk render 1`] = `
<div>
  <button
    class="button"
    data-testid="menuButton"
  >
    <span
      class="buttonBurgerIcon"
    >
      <span
        class="top"
      />
      <span
        class="middle"
      />
      <span
        class="bottom"
      />
    </span>
    <span
      class="buttonText"
    >
      MENY
    </span>
  </button>
</div>
`;
